--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 
         <ul class="lista-menu">
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Programação</a>
+            <a href="#" class="lista-menu__link">Escapamentos</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Front-end</a>
+            <a href="#" class="lista-menu__link">Peças Avulsas</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Infraestrutura</a>
+            <a href="#" class="lista-menu__link">Retifica</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Business</a>
+            <a href="#" class="lista-menu__link">Motores</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Design & UX</a>
+            <a href="#" class="lista-menu__link">Carenagens</a>
           </li>
         </ul>
         <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
@@ -75,7 +75,7 @@
           class="container__imagem container__imagem-transparente"></a>
       <a href="#" class="container__link">
         <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
-        <p class="container__texto">Minha sacola</p>
+        <p class="container__texto">Carrinho</p>
       </a>
       <a href="#" class="container__link">
         <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
@@ -86,7 +86,7 @@
 
   <section class="banner">
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-    <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+    <p class="banner__texto">Encontre em nosso estoque tudo que precisa para sua moto!</p>
     <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
   </section>
 
@@ -138,7 +138,7 @@
         <div class="card__botões">
           <ul class="botões">
             <li class="botões__item">
-              <img src="img/Favoritos.svg" alt="Favoritar livro" />
+              <img src="img/Favoritos.svg" alt="Favoritar peça" />
             </li>
             <li class="botões__item">
               <img src="img/Compras.svg" alt="Adicionar no carrinho de compras" />
