--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AluraBooks</title>
+  <title>Auto peças</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,19 +24,19 @@
       <ul class="lista-menu">
         <li class="lista-menu__titulo">Categorias</li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
+          <a href="#" class="lista-menu__link">Escapamentos</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
+          <a href="#" class="lista-menu__link">Peças Avulsas</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Infraestrutura</a>
+          <a href="#" class="lista-menu__link">Retifica</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
+          <a href="#" class="lista-menu__link">Motores</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Design & UX</a>
+          <a href="#" class="lista-menu__link">Carenagens</a>
         </li>
       </ul>
       <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
@@ -65,8 +65,8 @@
             <a href="#" class="lista-menu__link">Carenagens</a>
           </li>
         </ul>
-        <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
-        <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+        <li class="opções__item"><a href="#" class="opções__link">Onde fica?</a></li>
+        <li class="opções__item"><a href="#" class="opções__link">Valores de reparos </a></li>
       </ul>
 
     </div>
@@ -87,7 +87,7 @@
   <section class="banner">
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
     <p class="banner__texto">Encontre em nosso estoque tudo que precisa para sua moto!</p>
-    <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    <input type="search" class="banner__pesquisa" placeholder="Qual peça procura?">
   </section>
 
   <section class="carrossel">
@@ -141,7 +141,7 @@
               <img src="img/Favoritos.svg" alt="Favoritar peça" />
             </li>
             <li class="botões__item">
-              <img src="img/Compras.svg" alt="Adicionar no carrinho de compras" />
+              <img src="img/Compras.svg" alt="Adicionar ao carrinho" />
             </li>
           </ul>
           <a href="#" class="botões__ancora">Saiba mais</a>
@@ -162,15 +162,15 @@
 
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
+          <div class="swiper-slide"><img src="img/pneu.jpg"
+              alt=""></div>
+          <div class="swiper-slide"><img src="img/Susp.jpg" alt="">
           </div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
+          <div class="swiper-slide"><img src="img/embreagem.jpeg" alt="">
           </div>
-          <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
-          <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
-          <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+          <div class="swiper-slide"><img src="img/lona.png" alt=""></div>
+          <div class="swiper-slide"><img src="img/bengala.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="img/motul.jpg" alt=""></div>
         </div>
 
         <!-- If we need navigation buttons -->
@@ -184,10 +184,9 @@
           <!-- 1º coluna -->
           <div class="descrição">
             <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-            <h3 class="descrição__titulo">Autora do Mês</h3>
+            <h3 class="descrição__titulo">Vendedora do mês</h3>
             <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
-              Front-End.
+            <p class="descrição__texto">Mais de 600 vendas aprovadas no mês de agosto.
             </p>
           </div>
           <!-- 2º coluna -->
@@ -215,25 +214,25 @@
     <ul class="tópicos__lista">
       <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Marketing Digital</a>
+        <a href="#" class="tópicos__link">Retifica</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Agile</a>
+        <a href="#" class="tópicos__link">escapamentos</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Startups</a>
+        <a href="#" class="tópicos__link">Peças Avulsas</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">HTML & CSS</a>
+        <a href="#" class="tópicos__link">Motores</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Python</a>
+        <a href="#" class="tópicos__link">Carenagens</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">OO</a>
+        <a href="#" class="tópicos__link">Mecanica</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Java</a>
+        <a href="#" class="tópicos__link">Onde fica?</a>
       </li>
     </ul>
   </section>
@@ -242,7 +241,7 @@
     <div class="contato__descrição">
       <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
       <p class="contato__texto">
-        Atualizações de e-books, novos livros, promoções e outros.
+        Peças Novas e recondicionadas. Honda/Yamaha/Suzuki/Shineray
       </p>
     </div>
     <input type="email" placeholder="        Cadastre seu e-mail" class="contato__email">
