--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <a href="#" class="lista-menu__link">Carenagens</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-      <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
+      <img src="img/logo.png" alt="Logo da Alurabooks" class="container__imagem">
+      <h1 class="container__titulo"><b class="container__titulo--negrito">Auto</b>Peças</h1>
 
       <ul class="opções">
         <input type="checkbox" id="opções-menu" class="opções__botão" />
@@ -101,11 +101,12 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg"
-              alt="Livro sobre liderança em design design da alura books"></div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
+          <div class="swiper-slide"><img src="img/220.webp"
+              alt="Kit 220 para 160"></div>
+          <div class="swiper-slide"><img src="img/190.webp"
+              alt="Kit 190 para 160"></div>
+          <div class="swiper-slide"><img src="img/250.webp"
+              alt="Kit 250 para 160">
           </div>
           <div class="swiper-slide">
             <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
@@ -127,13 +128,13 @@
       <div class="card">
         <div class="card__descrição">
           <div class="descrição">
-            <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+            <h3 class="descrição__titulo">Vamos montar um motorzão?</h3>
+            <h2 class="descrição__titulo-livro">temos, 190/200/220</h2>
             <p class="descrição__texto">
-              Construindo uma aplicação integrada com a plataforma do Google.
+              Melhores valores e menos tempo.
             </p>
           </div>
-          <img src="img/Angular.svg" class="descrição__imagem" />
+          <img src="img/motor.jpg" class="descrição__imagem" />
         </div>
         <div class="card__botões">
           <ul class="botões">
@@ -184,13 +185,13 @@
           <!-- 1º coluna -->
           <div class="descrição">
             <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-            <h3 class="descrição__titulo">Vendedora do mês</h3>
-            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+            <h3 class="descrição__titulo">Vendedor do mês</h3>
+            <h2 class="descrição__titulo-livro">Ricardo Muniz</h2>
             <p class="descrição__texto">Mais de 600 vendas aprovadas no mês de agosto.
             </p>
           </div>
           <!-- 2º coluna -->
-          <img src="img/Escritora.svg" class="descrição__imagem">
+          <img src="img/escritora.png" class="descrição__imagem">
         </div>
 
         <!-- 2º linha -->
@@ -212,7 +213,7 @@
   <section class="tópicos">
     <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
     <ul class="tópicos__lista">
-      <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Cabeçotes</a></li>
       <li class="tópicos__item">
         <a href="#" class="tópicos__link">Retifica</a>
       </li>
@@ -248,86 +249,6 @@
   </section>
 
   <hr />
-
-  <footer class="rodapé">
-    <h2 class="rodapé__titulo">Grupo Alura</h2>
-    <ul class="lista-rodapé">
-      <li class="lista-rodapé__titulo">Educação</li>
-      <li class="lista-rodapé__item">
-        <img src="img/Caelum.svg" alt="Logo da Caelum" />
-        <a href="#" class="lista-rodapé__link">Caelum</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/CasaDoCodigo.svg" alt="Logo da Casa do Código" />
-        <a href="#" class="lista-rodapé__link">Casa do Código</a>
-      </li>
-    </ul>
-
-    <ul class="lista-rodapé">
-      <li class="lista-rodapé__titulo">Educação online</li>
-      <li class="lista-rodapé__item">
-        <img src="img/Alura.svg" alt="Logo da Alura" />
-        <a href="#" class="lista-rodapé__link">Alura</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraEmpresas.svg" alt="Logo da AluraParaEmpresas" />
-        <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraLATAM.svg" alt="Logo da Alura Latam" />
-        <a href="#" class="lista-rodapé__link">Alura LATAM</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraStart.svg" alt="Logo da Alura START" />
-        <a href="#" class="lista-rodapé__link">Alura Start</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/MusicDot.svg" alt="Logo da Music Dot" />
-        <a href="#" class="lista-rodapé__link">Music Dot</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraLingua.svg" alt="Logo da Alura Lingua" />
-        <a href="#" class="lista-rodapé__link">Alura Língua</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/PM3.svg" alt="Logo da PM3" />
-        <a href="#" class="lista-rodapé__link">PM3</a>
-      </li>
-    </ul>
-
-    <ul class="lista-rodapé">
-      <li class="lista-rodapé__titulo">Comunidade</li>
-      <li class="lista-rodapé__item">
-        <img src="img/HipstersTech.svg" alt="Logo do Hipsters ponto Tech" />
-        <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/ScubaDev.svg" alt="Logo do Scuba Dev" />
-        <a href="#" class="lista-rodapé__link">Scuba Dev</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/LayersTech.svg" alt="Logo do Layers ponto Tech" />
-        <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/LikeABoss.svg" alt="Logo do Like a Boss" />
-        <a href="#" class="lista-rodapé__link">Like a Boss</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem fronteiras" />
-        <a href="#" class="lista-rodapé__link">Carreira sem fronteiras</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/HipstersJobs.svg" alt="Logo do Hipsters ponto jobs" />
-        <a href="#" class="lista-rodapé__link">Hipsters ponto jobs</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/GUJ.svg" alt="Logo do GUJ" />
-        <a href="#" class="lista-rodapé__link">GUJ</a>
-      </li>
-    </ul>
-  </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const swiper = new Swiper(".swiper", {
